@@ -49,18 +49,15 @@ const parm_desc rob_parm_table[] =	/* needed by fisher.c */
 
 /* Function Prototypes */
 
-#ifdef	ENABLE_ROBINSON_METHOD
 static void	rob_initialize_constants(void);
 static double	rob_get_spamicity(size_t robn, FLOAT P, FLOAT Q);
 static void	rob_print_summary(void);
-#endif
 
 /* Static Variables */
 
 double bad_cnt;
 double good_cnt;
 
-#ifdef	ENABLE_ROBINSON_METHOD
 rf_method_t rf_robinson_method = {	/* needed by config.c */
     {
 	"robinson",			/* const char		  *name;		*/
@@ -75,7 +72,6 @@ rf_method_t rf_robinson_method = {	/* needed by config.c */
     rob_get_spamicity,			/* rf_get_spamicity	  *get_spamicity	*/
     rob_print_summary			/* rf_print_summary	  *print_summary	*/
 };
-#endif
 
 /* Function Definitions */
 
@@ -283,7 +279,6 @@ double rob_compute_spamicity(wordhash_t *wh, FILE *fp) /*@globals errno@*/
     return (spamicity);
 }
 
-#ifdef	ENABLE_ROBINSON_METHOD
 double rob_get_spamicity(size_t robn, FLOAT P, FLOAT Q)
 {
     if (robn == 0)
@@ -307,9 +302,7 @@ double rob_get_spamicity(size_t robn, FLOAT P, FLOAT Q)
 
     return rob_stats.s.spamicity;
 }
-#endif
 
-#ifdef	ENABLE_ROBINSON_METHOD
 void rob_print_summary(void)
 {
     if (!Rtable) {
@@ -327,7 +320,6 @@ void rob_print_summary(void)
 		      rob_stats.p_pr, rob_stats.q_pr, rob_stats.s.spamicity, 
 		      rob_stats.p_ln, rob_stats.q_ln, min_dev);
 }
-#endif
 
 void rob_initialize_with_parameters(rob_stats_t *stats, double _min_dev, double _spam_cutoff)
 {
@@ -371,12 +363,10 @@ void rob_initialize_with_parameters(rob_stats_t *stats, double _min_dev, double 
     return;
 }
 
-#ifdef	ENABLE_ROBINSON_METHOD
 void rob_initialize_constants(void)
 {
     rob_initialize_with_parameters(&rob_stats, ROBINSON_MIN_DEV, ROBINSON_SPAM_CUTOFF);
 }
-#endif
 
 void rob_cleanup(void)
 {
