@@ -8,6 +8,12 @@ is in the RELEASE.NOTES files.  Read it!!
 If updating from a bogofilter version older than 0.15.4, it's a good
 idea to retrain or else use the '-H' (header tag degeneration) option.
 
+	2003-11-01
+
+	* Remove --disable-* options for algorithms. Has never been supported
+	  well and serves no useful purpose, the algorithm code is irrelevant
+	  compared to lexer or other stuff.
+
 0.15.8	2003-10-29
 
 	* Print "X-Bogosity" line when "-t" is used alone.
